# adventofcode2018

./: adventofcode.cabal
src/1/: Main.hs
src/2/: Main.hs
