name:                adventofcode
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/adventofcode#readme
license:             BSD3
license-file:        LICENSE
author:              Benjamin Dudiak-Fry
maintainer:          bdudiakfry@gmail.com
copyright:           2018 Benjamin Dudiak-Fry
category:            Challenge
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable day1
  hs-source-dirs:      src/1
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
		    ,  containers
